recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	while(s!=0){
		current(steps)	
		avance(length)
		droite(angle)
		avance(shrink*length)
		var s:Int = steps	
		s=s-1
	}

}

